<resources>
    <string name="app_name">My Thoughts</string>
    <string name="title">Title (Optional)</string>
    <string name="thought">What\'s on your mind?</string>
    <string name="dialog_add_message">Do you want to save this entry?</string>
    <string name="dialog_positive">Save</string>
    <string name="dialog_negative">Discard</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="title_transition">titleTransition</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="dialog_edit_message">Do you want to save changes?</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="home">Home</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="oldest_first">Oldest First</string>
    <string name="newest_first">Newest First</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="months_abbreviated">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="backup_restore_cat">Backup &amp; Restore</string>
    <string name="appearance_category">Appearance</string>
    <string name="dropdown_bold_text_style">Text Style</string>
    <string-array name="dropdown_text_styles">
        <item>Normal</item>
        <item>Bold</item>
    </string-array>
    <string name="google_account_login">Google Account Login</string>
    <string name="tap_to_login">Tap to login</string>
    <string name="new_first">Newest First</string>
    <string name="old_first">Oldest First</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
